--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,46 @@
-<h2>Change your password</h2>
+<h2></h2>
+<section class="content-header">
+	<h1>Change your password </h1>
+</section>
+<section class="content">
+	<div class="box box-success">
+		<div class="box-header">
+			<h4 class="with-border">Change your password</h4>
+		</div>
+		<div class="box-body">
+			<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, :class => "form-horizontal"}) do |f| %>
+			<%= devise_error_messages! %>
+			<%= f.hidden_field :reset_password_token %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+			<div class="form-group">
+				<div class="col-md-3 col-md-offset-1">
+					<%= f.label :password, "New password" ,:class => "control-label"%>
+				</div>
+				<div class="col-md-5">
+					<% if @minimum_password_length %>
+					<em>(<%= @minimum_password_length %> characters minimum)</em>
+					<br />
+					<% end %>
+					<%= f.password_field :password, autofocus: true, autocomplete: "off", :class => "form-control" %>
+				</div>
+			</div>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
-  </div>
+			<div class="form-group">
+				<div class="col-md-3 col-md-offset-1">
+					<%= f.label :password_confirmation, "Confirm new password", :class => "control-label" %>
+				</div>
+				<div>
+					<%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control" %>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-md-5">
+					<%= f.submit "Change my password", :class => "btn btn-sm btn-success" %>
+				</div>
+			</div>
+			<% end %>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+			<%= render "devise/shared/links" %>
+		</div>
+	</div>
+</section>
