--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -17,7 +17,7 @@
     .box-body
       = link_to "Add your expenses", new_expense_path, :class => "btn btn-sm btn-default"
       %br
-      %br 
+      %br
       %table.table.table-responsive.table-bordered
         - if @expenses.empty?
           = "No any Expense Record"
@@ -27,11 +27,11 @@
             %th Amount
             %th Deposite Date
             %th Actions
-          - @expenses.each do |expense|  
+          - @expenses.each do |expense|
             %tr
-              %td= expense.expense_category.expense_source
+              %td= expense.expense_category.expense_source.to_s+' - '+expense.description.to_s
               %td= expense.amount
               %td= expense.date
               %td
-                = link_to "Edit Record" , edit_expense_path(expense.id) 
-    = will_paginate @expenses , renderer: BootstrapPagination::Rails           
+                = link_to "Edit Record" , edit_expense_path(expense.id)
+    = will_paginate @expenses , renderer: BootstrapPagination::Rails
