--- a/app/views/incomes/_form.html.haml
+++ b/app/views/incomes/_form.html.haml
@@ -13,3 +13,8 @@
     = f.label "select Category", :class => "control-label"
   .col-md-5
     = f.collection_select :income_category_id, IncomeCategory.all, :id, :income_source, {:prompt => "Select Category"}, {:class => "form-control"}
+.form-group
+  .col-md-4.col-md-offset-1
+    = f.label "Description", :class => "control-label"
+  .col-md-5
+    = f.text_area :description, class: 'form-control'
