--- a/app/views/shared/_navigation_bar.html.haml
+++ b/app/views/shared/_navigation_bar.html.haml
@@ -4,7 +4,7 @@
       %b EIM
     %span.logo-lg
       %b Expense Manager
-  %nav.navbar.navbar-static-top{:role => "navigation", "data-no-turbolink" => ""}
+  %nav.navbar.navbar-static-top{:role => "navigation"}
     %a.sidebar-toggle{"data-toggle" => "offcanvas", :href => "#", :role => "button"}
       %span.sr-only Toggle navigation
     .navbar-custom-menu
@@ -30,36 +30,3 @@
             %a{:href => "/users/sign_in"} Sign In
           %li
             %a{:href => "/users/sign_up"} Sign Up
-          %li
-            %a Welcome Guest User
-- if user_signed_in?
-  %aside.main-sidebar{"data-no-turbolink" => ""}
-    %section.sidebar
-      %ul.sidebar-menu
-        %li.header MAIN NAVIGATION
-        %li.active.treeview
-          %a{:href => "/dashboards"}
-            %i.fa.fa-dashboard
-            %span Dashboard
-        %li
-          %a{:href => "/incomes"}
-            %i.fa.fa-plus
-            %span Income
-        %li
-          %a{:href => "/expenses"}
-            %i.fa.fa-minus
-            %span Expense
-        %li
-          %a{:href => "/transaction_records/total_balance"}
-            %i.fa.fa-file-text
-            %span Transaction Report
-        - if current_user.role == "admin"
-          %li
-            %a{:href => "/incomes/all_income_category"}
-              %i.fa.fa-calculator
-              %span Add Income Category   
-          %li
-            %a{:href => "/expenses/all_expense_category"}
-              %i.fa.fa-calculator
-              %span Add Expense Category
-                        
