amount refund model. if you give some amount to some one and they returned you then we have option to add this amount in income section again with refund status.

--- a/app/views/expenses/_form.html.haml
+++ b/app/views/expenses/_form.html.haml
@@ -18,3 +18,8 @@
     = f.label "Description", :class => "control-label"
   .col-md-5
     = f.text_area :description, class: 'form-control'
+.checkbox
+  .col-md-12.col-md-offset-1
+    = f.check_box :refundable, {}, "YES", "NO"
+    = f.label "Is this amount refundable? (Check for YES & Uncheck for NO)", class: 'text-red'
+
