--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -25,12 +25,14 @@
           %tr
             %th Expense Category
             %th Amount
+            %th Refundable
             %th Deposite Date
             %th Actions
           - @expenses.each do |expense|
             %tr
               %td= expense.expense_category.expense_source.to_s+' - '+expense.description.to_s
               %td= expense.amount
+              %td= expense.refundable.to_s+'- '+refund_status(expense).titleize
               %td= expense.date
               %td
                 = link_to "Edit Record" , edit_expense_path(expense.id)
