--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -85,6 +85,23 @@
       </div>
     </div>
     <div class="col-lg-3 col-xs-6">
+      <div class="small-box bg-blue">
+        <div class="inner">
+          <h3>
+            <%= "#{total_borrowers_count(current_user)}" %>
+          </h3>
+          <p>Borrower</p>
+        </div>
+        <div class="icon">
+          <i class="fa fa-list"></i>
+        </div>
+        <a class="small-box-footer" href="/borrowers">
+          More info
+          <i class="fa fa-arrow-circle-right"></i>
+        </a>
+      </div>
+    </div>
+    <div class="col-lg-3 col-xs-6">
       <div class="small-box bg-red">
         <div class="inner">
           <h3>Download</h3>
