--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -30,7 +30,7 @@
           <%= "No any Expense Record" %>
         <% else %>
           <tr>
-            <th>Expense Category</th>
+            <th>Category : Borrower</th>
             <th>Amount</th>
             <th>Refundable</th>
             <th>Deposite Date</th>
@@ -39,7 +39,8 @@
           <% @expenses.each do |expense| %>
             <tr>
               <td>
-                <%= expense.expense_category.expense_source.to_s+' - '+expense.description.to_s %>
+                <% borrower_name = expense.borrower.present? ? " : "+expense.borrower.name : "" %>
+                <%= expense.expense_category.expense_source.to_s+' - '+expense.description.to_s+''+borrower_name %>
               </td>
               <td>
                 <% if expense.refundable? && expense.remain_amount > 0 %>
